--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "url": "https://github.com/ThomasAndrewMacLean/ThomasAndrewMacLean.github.io/issues"
   },
   "homepage": "https://github.com/ThomasAndrewMacLean/ThomasAndrewMacLean.github.io#readme",
-  "devDependencies": {
-    "webpack": "^3.9.1",
-    "webpack-dev-server": "^2.9.5"
+  "devDependencies": {},
+  "dependencies": {
+    "html2canvas": "^1.0.0-alpha.12",
+    "jspdf": "^1.4.1"
   }
 }
