--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "cv online",
     "main": "index.js",
     "scripts": {
-        "start": "parcel index.html"
+        "start": "serve"
     },
     "repository": {
         "type": "git",
@@ -20,11 +20,6 @@
     },
     "homepage": "https://github.com/ThomasAndrewMacLean/ThomasAndrewMacLean.github.io#readme",
     "devDependencies": {
-        "parcel-bundler": "^1.9.7",
         "serve": "^9.6.0"
-    },
-    "dependencies": {
-        "html2canvas": "^1.0.0-alpha.12",
-        "jspdf": "^1.4.1"
     }
 }
